trunk/Archive2/c3/369ab5566ae236/output
main.cpp: In function 'int main()':
main.cpp:26:27: error: invalid use of 'struct U::A'
     std::cout << typeid(a.A).hash_code(); 
                           ^
main.cpp:27:13: error: expected unqualified-id before '.' token
     struct a.A b;                         
             ^
main.cpp:28:6: error: expected unqualified-id before '.' token
     a.A b;                          
      ^
main.cpp:29:6: error: expected unqualified-id before '.' token
     a.A.v = 5;                            
      ^
